Closed
Bug 1272562
Opened 9 years ago
Closed 9 years ago
MOZ_DIAGNOSTIC_ASSERT failure in mozilla::MediaFormatReader::Seek
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
VERIFIED
FIXED
mozilla49
| Tracking | Status | |
|---|---|---|
| firefox49 | --- | fixed |
People
(Reporter: n.nethercote, Assigned: u480271)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug was filed from the Socorro interface and is
report bp-275bf379-f20e-4ee4-9e33-5328e2160512.
=============================================================
This started showing up in Nightly 20160512030253. This assertion is failing:
MOZ_DIAGNOSTIC_ASSERT(mSeekPromise.IsEmpty());
On Windows it's #5 topcrash for that build, on Mac it's #2, on Linux it's #1. YouTube is present in several of the crash reports.
jya, can you please take a look?
Flags: needinfo?(jyavenard)
Updated•9 years ago
|
Assignee: nobody → jyavenard
Flags: needinfo?(jyavenard)
Updated•9 years ago
|
Blocks: 1224973
Keywords: regression
Really need to reset any outstanding mAudio promise when resetting MFR,
even in the case of just seeking the video.
Review commit: https://reviewboard.mozilla.org/r/52411/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/52411/
Attachment #8752067 -
Flags: review?(jyavenard)
Comment on attachment 8752067 [details]
MozReview Request: Bug 1272562 - Don't check audio asserts when seeking video. r?jya
Review request updated; see interdiff: https://reviewboard.mozilla.org/r/52411/diff/1-2/
Attachment #8752067 -
Attachment description: MozReview Request: Bug 1272562 - ResetDecode() - Cancel outstanding audio promise in all cases. r?jya → MozReview Request: Bug 1272562 - Don't check audio asserts when seeking video. r?jya
Comment 3•9 years ago
|
||
Comment on attachment 8752067 [details]
MozReview Request: Bug 1272562 - Don't check audio asserts when seeking video. r?jya
https://reviewboard.mozilla.org/r/52411/#review49329
Attachment #8752067 -
Flags: review?(jyavenard) → review+
Comment 4•9 years ago
|
||
(In reply to Dan Glastonbury :kamidphish from comment #1)
> Created attachment 8752067 [details]
> MozReview Request: Bug 1272562 - Don't check audio asserts when seeking
> video. r?jya
>
> Really need to reset any outstanding mAudio promise when resetting MFR,
> even in the case of just seeking the video.
Why is that?
This sounds wrong to me.
>
> Review commit: https://reviewboard.mozilla.org/r/52411/diff/#index_header
> See other reviews: https://reviewboard.mozilla.org/r/52411/
Updated•9 years ago
|
Attachment #8752067 -
Flags: review+
Comment 5•9 years ago
|
||
Comment on attachment 8752067 [details]
MozReview Request: Bug 1272562 - Don't check audio asserts when seeking video. r?jya
https://reviewboard.mozilla.org/r/52411/#review49371
::: dom/media/MediaFormatReader.cpp
(Diff revisions 1 - 2)
> mVideo.RejectPromise(CANCELED, __func__);
> }
> }
>
> - if (HasAudio()) {
> + if (HasAudio() && aQueues == AUDIO_VIDEO) {
> - if (aQueues == AUDIO_VIDEO) {
Oh i see.. I should have spotted this in the other bug.
sorry for that.
Comment 6•9 years ago
|
||
Comment on attachment 8752067 [details]
MozReview Request: Bug 1272562 - Don't check audio asserts when seeking video. r?jya
https://reviewboard.mozilla.org/r/52411/#review49403
i thought i had r+ this
Attachment #8752067 -
Flags: review+
Comment 8•9 years ago
|
||
User Agent Mozilla/5.0 (Macintosh; Intel Mac OS X 10.9; rv:49.0) Gecko/20100101 Firefox/49.0
Build ID 20160512030253
Nightly 49 crashed for me also with this signature when watching an amazon video using widevine plugin.
Crash ID:
https://crash-stats.mozilla.com/report/index/1c643ef2-c26a-410f-a764-3870c2160513
Comment 9•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
| Reporter | ||
Comment 10•9 years ago
|
||
Thank you for the fast fix.
| Reporter | ||
Comment 11•9 years ago
|
||
We had 21 of these crashes on Windows in Nightly 20160513030539 and zero in Nightly 20160514030209.
Status: RESOLVED → VERIFIED
| Reporter | ||
Updated•9 years ago
|
Crash Signature: [@ mozilla::MediaFormatReader::Seek] → [@ mozilla::MediaFormatReader::Seek]
[@ mozilla::MediaFormatReader::RequestAudioData]
| Reporter | ||
Comment 12•9 years ago
|
||
I've moved the [@ mozilla::MediaFormatReader::RequestAudioData] crashes into bug 1273018.
Crash Signature: [@ mozilla::MediaFormatReader::Seek]
[@ mozilla::MediaFormatReader::RequestAudioData] → [@ mozilla::MediaFormatReader::Seek]
You need to log in
before you can comment on or make changes to this bug.
Description
•