Bug 1272562 - Don't check audio asserts when seeking video. r=jya

MozReview-Commit-ID: 8njbfw7ni24

--HG--
extra : rebase_source : 59bee06a39cc627831e160127120511eb5304fe8